--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
   font-size: 50px;
 }
@@ -7,6 +11,17 @@ table, th, td {
   background-color: gold;
 }
 
+td {
+  padding: 15px;
+}
+
 img {
   max-height: 100px;
+}
+
+button {
+  background-color: white;
+  border: none;
+  width: 100%;
+  padding: 4px;
 }
