--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ h1 {
 table, th, td {
   border: 1px solid black;
   background-color: gold;
+  text-align: center;
 }
 
 td {
-  padding: 15px;
+  padding: 5px;
 }
 
 img {
@@ -20,7 +21,8 @@ img {
 }
 
 button {
-  background-color: white;
+  background-color: gold;
+  cursor: pointer;
   border: none;
   width: 100%;
   padding: 4px;
