--- a/style.css
+++ b/style.css
@@ -68,14 +68,23 @@ h2 {
   font-size: 0.9rem;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 table, th, td {
   border: 1px solid black;
   background-color: gold;
   text-align: center;
 }
 
-td {
-  padding: 5px;
+th {
+  padding: 8px;
+}
+
+input {
+  border: none;
+  height: 30px;
 }
 
 img {
@@ -87,5 +96,6 @@ button {
   cursor: pointer;
   border: none;
   width: 100%;
+  height: 30px;
   padding: 4px;
 }
