--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a:hover {
   color: blue;
 }
 
-.navbar {
+nav {
   list-style-type: none;
   float: right;
   /*display: table;
@@ -51,12 +51,13 @@ a:hover {
 }
 
 .logo {
+  display: inline-block;
   /*display: flex;
   flex-direction: column;*/
 }
 
 li {
-  margin: 10px;
+  margin: 0px 10px;
   display: inline;
 }
 
