--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ caption {
   margin-top: 50px;
   margin-bottom: 20px;
   font-weight: bold;
-  font-size: 1.6rem;
+  font-size: 25px;
+  text-transform: capitalize;
+  font-style: oblique;
 }
 
 section {
@@ -63,6 +65,7 @@ input:focus {
 nav {
   list-style-type: none;
   float: right;
+  vertical-align: middle;
 }
 
 .logo {
@@ -83,6 +86,11 @@ h1 {
 h2 {
   margin: 0;
   font-size: 0.9rem;
+  font-variant: small-caps;
+}
+
+table {
+  caption-side: top;
 }
 
 table, th, td {
@@ -92,6 +100,10 @@ table, th, td {
   border-color: black;
   background-color: gold;
   text-align: center;
+}
+
+table td {
+  font: 16px "Georgia", sans-serif;
 }
 
 th {
