--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header {
   box-shadow: 1px 1px 3px #ccc;
   background-color: white;
   overflow: hidden;
+  page-break-after: always;
 }
 
 #header {
@@ -32,6 +33,7 @@ section {
   width: 100%;
   justify-content: center;
   align-items: center;
+  page-break-before: always;
 }
 
 strong {
@@ -64,7 +66,7 @@ input:focus {
 }
 
 nav {
-  list-style-type: none;
+  list-style: none;
   float: right;
   vertical-align: middle;
 }
@@ -73,11 +75,19 @@ nav {
   display: inline-block;
 }
 
-li {
+nav li {
   margin: 0px 10px;
   display: inline;
 }
 
+ol {
+  text-indent: 5px;
+  list-style-position: inside;
+  list-style-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fpng-5.findicons.com%2Ffiles%2Ficons%2F2222%2Fgloss_basic%2F32%2Fbullet_black.png&f=1&nofb=1");
+  background: gold;
+  margin-left: 5px;
+  margin-right: 5px;
+}
 
 h1 {
   margin: 0;
