--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body {
   background-color:rgb(250, 250, 250);
 }
 
+@media print {
+  .orphans {
+    orphans: 10;
+    widows: 2;
+  }
+}
+
 header {
   justify-content: space-around;
   align-items: center;
