--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 @media print {
   .orphans {
-    orphans: 10;
+    orphans: 2;
     widows: 2;
   }
 }
@@ -25,6 +25,7 @@ header {
   height: 400px;
   background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcmkt-image-prd.global.ssl.fastly.net%2F0.1.0%2Fps%2F3379856%2F1360%2F906%2Fm1%2Ffpnw%2Fwm1%2Fpfhgxchmb2ttmklouoabchtigsyma36lawo3w97ycjnyahr5vku9hequuk1beweg-.jpg%3F1507495665%26s%3D7b15527692314d3fc3a11d94a8c69a80&f=1&nofb=1");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 caption {
