--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 10px;
+  margin: 0;
   padding: 0;
   background-color:rgb(250, 250, 250);
 }
@@ -18,10 +18,12 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 80px;
   box-shadow: 1px 1px 3px #ccc;
   background-color: white;
   page-break-after: always;
+  padding: 15px;
+  position: fixed;
+  width: 100%;
 }
 
 #logo > h1 {
@@ -42,8 +44,8 @@ nav {
 }
 
 nav li {
-  margin: 0px 10px;
   display: inline;
+  margin: 15px;
 }
 
 a {
@@ -53,27 +55,60 @@ a {
 
 a:link { color: black; }
 a:visited { color: blue; }
-a:hover { color: red; }
-a:active { color: goldenrod; }
+a:hover { 
+  transition: 200ms;
+  color: goldenrod; 
+}
+a:active { color: maroon; }
 
 /* === Hero === */
 
 #hero {
   height: 400px;
   width: 100%;
-  background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcmkt-image-prd.global.ssl.fastly.net%2F0.1.0%2Fps%2F3379856%2F1360%2F906%2Fm1%2Ffpnw%2Fwm1%2Fpfhgxchmb2ttmklouoabchtigsyma36lawo3w97ycjnyahr5vku9hequuk1beweg-.jpg%3F1507495665%26s%3D7b15527692314d3fc3a11d94a8c69a80&f=1&nofb=1");
+  background-image: url("https://wallpaperaccess.com/full/1843937.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  height: 600px;
 }
 
 /* === Sections === */
 
 section {
   width: 100%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   page-break-before: always;
+  margin-top: 50px;
+}
+
+@media screen and (min-width: 850px) {
+  #about > div {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  #featured > div {
+    width: 100%;
+    overflow-x: auto;
+  }
+
+  #employees > div {
+    width: 100%;
+    overflow-x: auto;
+  }
+  
+  #about > div {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+  }
 }
 
 caption {
@@ -92,7 +127,7 @@ strong {
 ol {
   text-indent: 5px;
   list-style-position: inside;
-  list-style-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fpng-5.findicons.com%2Ffiles%2Ficons%2F2222%2Fgloss_basic%2F32%2Fbullet_black.png&f=1&nofb=1");
+  list-style-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Ff%2Ff8%2FFarm-Fresh_chinese_noodles.png&f=1&nofb=1");
   background: gold;
   margin-left: 5px;
   margin-right: 5px;
@@ -104,6 +139,7 @@ table {
   caption-side: top;
   margin: auto;
   width: 800px;
+  overflow-x: scroll;
 }
 
 table, th, td {
@@ -152,8 +188,17 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 50px;
 }
 
-footer img {
-  width: 400px;
+@media screen and (min-width: 850px) {
+  footer img {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  footer img {
+    width: 250px;
+  }
 }
