--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ ol {
   background: gold;
   margin-left: 5px;
   margin-right: 5px;
+  padding: 10px;
 }
 
 /* === Tables === */
@@ -190,6 +191,10 @@ footer {
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+}
+
+footer > figure {
+  text-align: center;
 }
 
 @media screen and (min-width: 850px) {
