--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ a:active { color: maroon; }
   background-size: cover;
   background-position: center;
   height: 400px;
+  page-break-after: always;
 }
 
 /* === Sections === */
@@ -94,7 +95,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  page-break-before: always;
+  page-break-after: always;
   margin-top: 50px;
 }
 
@@ -103,6 +104,10 @@ section {
     display: flex;
     flex-direction: row;
   }
+}
+
+#featured {
+  page-break-after: always;
 }
 
 @media screen and (max-width: 850px) {
@@ -121,6 +126,14 @@ section {
     flex-direction: column;
     margin: 10px;
   }
+}
+
+#employees {
+  page-break-after: always;
+}
+
+#recipes {
+  page-break-after: avoid;
 }
 
 dt, em {
@@ -210,6 +223,7 @@ footer {
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+  page-break-before: always;
 }
 
 footer > figure {
