--- a/style.css
+++ b/style.css
@@ -15,13 +15,20 @@ body {
 /* === Navigation === */
 
 header {
-  display: flex;
+  /*display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-around;*/
+  display: inline-block;
   box-shadow: 1px 1px 3px #ccc;
   background-color: white;
   padding: 15px 0;
   width: 100%;
+}
+
+#logo {
+  padding-left: 12%;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 #logo > h1 {
@@ -38,13 +45,14 @@ header {
 }
 
 .table-header {
-  float: left;
   font-size: 1.8rem;
 }
 
 nav {
+  padding-right: 12%;
   list-style: none;
   vertical-align: middle;
+  float: right;
 }
 
 @media screen and (min-width: 850px) {
