--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a:active { color: maroon; }
 
 #hero {
   width: 100%;
-  background-image: url("https://wallpaperaccess.com/full/1843937.jpg");
+  background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.kellwoodlighting.co.uk%2Fmedia%2Fuploads%2Fcat-129%2Fsupermarket-lighting-ba.jpg%3FTemplateId%3D6%26Width%3D1920%26Height%3D871&f=1&nofb=1");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
