--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,11 @@ table td {
 table th {
   padding: 8px;
   background-color: goldenrod;
+  cursor: pointer;
+}
+
+.tablesorter-ignoreRow {
+  visibility: collapse;
 }
 
 .btn-reset {
@@ -207,6 +212,8 @@ table th {
   border-right: 1px solid black;
   border-bottom: 1px solid black;
   cursor: pointer;
+  text-transform: uppercase;
+  font-size: 0.9em;
 }
 
 input {
@@ -225,6 +232,10 @@ button {
   width: 100%;
   height: 30px;
   padding: 4px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  text-transform: uppercase;
 }
 
 /* === Other === */
