--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,11 @@ table td {
   background-color: lightgoldenrodyellow;
 }
 
+td img {
+  width: 100%;
+  height: 100%;
+}
+
 table th {
   padding: 8px;
   background-color: goldenrod;
