--- a/client/styles.css
+++ b/client/styles.css
@@ -236,6 +236,8 @@ table th {
   background-color: greenyellow;
   cursor: pointer;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .btn-cancel {
