--- a/client/styles.css
+++ b/client/styles.css
@@ -2,15 +2,28 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  background-color:rgb(250, 250, 250);
 }
+
+/* === Print === */
 
 @media print {
   .orphans {
     orphans: 2;
     widows: 2;
   }
+
+  nav { display: none; }
+  #hero { display: none; }
+  #featured { page-break-after: avoid; }
+  .ascii { display: none; }
+  .row-input { display: none; }
+  .btn-add-product { display: none; }
+  .btn-reset { display: none; }
+  #section-search { display: none; }
 }
+
+/* Line Spacing */
+p { line-height: 150%; }
 
 /* === Header === */
 
@@ -69,6 +82,7 @@ nav {
 a {
   text-decoration: none;
   color: black;
+  line-height: 150%;
 }
 
 a:link { color: black; }
@@ -130,6 +144,7 @@ section {
 
 dl {
   padding: 15px;
+  line-height: 150%;
 }
 
 dt, em {
@@ -139,6 +154,7 @@ dt, em {
 caption {
   margin-bottom: 20px;
   font-size: 18px;
+  line-height: 150%;
 }
 
 strong {
@@ -157,6 +173,7 @@ strong {
   margin-left: 5px;
   margin-right: 5px;
   padding: 10px;
+  line-height: 150%;
 }
 
 #review-list {
@@ -188,6 +205,7 @@ table, th, td {
   border-color: black;
   text-align: left;
   vertical-align: middle;
+  line-height: 150%;
 }
 
 table td {
@@ -210,14 +228,14 @@ table th {
 }
 
 .btn-delete {
-  background-color: red;
+  background-color: #ff6060;
   cursor: pointer;
   text-align: center;
 }
 
 .btn-reset {
   padding: 7px;
-  background-color: red;
+  background-color: #ff6060;
   text-align: center;
   border-left: 1px solid black;
   border-right: 1px solid black;
@@ -225,6 +243,7 @@ table th {
   cursor: pointer;
   text-transform: uppercase;
   font-size: 0.9em;
+  width: 100%;
 }
 
 .btn-edit {
@@ -234,7 +253,7 @@ table th {
 }
 
 .btn-update {
-  background-color: greenyellow;
+  background-color: #00ff00;
   cursor: pointer;
   text-align: center;
   width: 100%;
@@ -297,6 +316,7 @@ footer {
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+  line-height: 150%;
 }
 
 footer > figure {
